[package]
name = "wgpu-hikari"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
glam = "0.24"
log = "0.4"
winit = "0.28"
pollster = "0.3"

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu"
rev = "d17165f"

[dependencies.encase]
version = "0.6"
features = ["glam"]
